# exel-bot-parser

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
src/: celery_app.py  main.py
src/bot/: __init__.py  bot.py  middleware.py
src/bot/handlers/: __init__.py  clear_chat.py  group_message.py  info.py  menu.py  on_group_message.py  start.py  tranfer_orders.py  transfer_orders.py
src/bot/keyboards/: __init__.py  clear_warning.py  menu.py
src/celery_tasks/: __init__.py  delete_message.py  transfer_messages.py
src/models/: __init__.py  exel_table.py  extract_message.py  message.py  similarity.py
src/service/: __init__.py  char_comparator.py  message_cleanup.py  message_transfer.py  redis_client.py  table_manager.py
src/service/celery/: app.py
src/shared/: __init__.py  config.py  send_message.py
src/table_manager/: goggle_account.py
src/utils/: __init__.py  clients.py  message_extractor.py  send_message.py  text_extractor.py
