[project]
name = "exel-bot-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.24.0",
    "celery>=5.6.2",
    "countryflag>=1.1.1",
    "emoji-country-flag>=2.1.0",
    "google-auth>=2.47.0",
    "gspread>=6.2.1",
    "kombu>=5.6.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
]
